prepare the about page layout, add backend data fetching from prismic for the detail/:uid endpoint

--- a/views/base.pug
+++ b/views/base.pug
@@ -10,7 +10,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
 
-    // Sets the base URL for relative links
+    // Sets the base URL for relative links, we should include this to avoid re renderings
     base(href="/")
 
     // Sets the page title
