--- a/views/pages/detail.pug
+++ b/views/pages/detail.pug
@@ -4,5 +4,30 @@ block variables
   - var template = 'detail'
 
 block content 
-  .
-  h1.collections__title Detail
+  .detail
+    .detail__wrapper
+      figure.detail__media
+        img.detail__media__image(alt=product.data.image.alt src=product.data.image.url)
+
+      .detail__information 
+        p.detail__information__collection=product.data.collection.data.title
+
+        h1.detail__information__title 
+
+        .detail__information__content 
+          .detail__information__highlights
+            each highlight in product.data.highlights
+              p.detail__information__highlights
+                svg.detail__information__hihglights__icon
+                  use(xlink:href=`${highlight.highlights_icon.toLowerCase()}`)
+
+                //- | #{highlight.text}
+                span.detail__information__highlight__text=highlight.text
+
+          .detail__information__list 
+            each item in product.data.informations
+              p.detail__information__item 
+                strong.detail__information__item__title=item.informations_label
+                span.detail__information__item__description=item.informations_description
+
+          a.detail__information__link(href=product.data.button[0].url.url target="_blank")=product.data.button[0].text
