--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -1,13 +1,11 @@
 nav.navigation
   .navigation_wrapper 
-    a.navigation__ling(href="/")
-      | Floema
+    //- a.navigation__ling(href="/") Floema
+    a.navigation__ling(href="/")=meta.data.title
 
       svg.navigation__link__icon
   
   ul.navigation__list
-    li.navigation__list__item
-      a.navigation__list__link(href="/about") About
-      
-    li.navigation__list__item
-      a.navigation__list__link(href="/collections") Collections
+    each item in navigation.data.list
+      li.navigation__list__item
+        a.navigation__list__link(href=Link(item.link))=item.text
