--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -1,5 +1,9 @@
+html {
+  font-size: calc(100vw / 1920 * 10);
+}
+
 body {
-  @extend %description-18;
+  // @extend %description-18;
 
   font-family: $font-suisse-bp;
 
