--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -1,11 +1,12 @@
 .preloader {
+  display: none;
   @extend %center;
   @extend %cover;
 
   background: $color-contessa;
   color: $color-quarter-spanish-white;
   text-align: center;
-  z-index: z('preloader');
+  // z-index: z('preloader');
 }
 
 .preloader__text {
