--- a/views/pages/detail.pug
+++ b/views/pages/detail.pug
@@ -12,17 +12,17 @@ block content
       .detail__information 
         p.detail__information__collection=product.data.collection.data.title
 
-        h1.detail__information__title 
+        h1.detail__information__title=product.data.title.replace(/\n/g, '<br>')
 
         .detail__information__content 
           .detail__information__highlights
             each highlight in product.data.highlights
-              p.detail__information__highlights
+              p.detail__information__highlight
                 svg.detail__information__hihglights__icon
                   use(xlink:href=`${highlight.highlights_icon.toLowerCase()}`)
 
                 //- | #{highlight.text}
-                span.detail__information__highlight__text=highlight.text
+                span.detail__information__highlight__text=highlight.text.replace(/\n/, '<br>')
 
           .detail__information__list 
             each item in product.data.informations
