--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -14,18 +14,18 @@ block content
           each media in about.data.gallery
             figure.about__gallery__media 
               //- Renders an image for each gallery media item
-              img.about__gallery__media__image(alt=media.image.alt src=media.image.url)
+              img.about__gallery__media__image(alt=media.image.alt data-src=media.image.url)
 
       //- Loops through each section in about.data.body
       each section in about.data.body
         //- If the section is a title slice, render the title
         if section.slice_type == 'title'
-          h2.about__title=section.primary.text 
+          h2.about__title(data-animation="title")=section.primary.text.replace(/\n/g, '<br>') 
 
 
         //- If the section is a content slice, render the content block
         if section.slice_type == 'content'
-          section.about__content
+          section.about__content(class=`${section.primary.type === 'Left' ? 'about__content--left' : 'about__content--right'}`)
             .about__content__wrapper 
               //- Render the label for the content section
               p.about__content__label=section.primary.label
@@ -35,7 +35,7 @@ block content
 
               //- Render the image for the content section
               figure.about__content__media
-                img.about__content__media__image(alt=section.primary.image.alt src=section.primary.image.url)
+                img.about__content__media__image(alt=section.primary.image.alt data-src=section.primary.image.url)
 
         //- If the section is a highlight slice, render the highlight block
         if section.slice_type == 'highlight'
@@ -46,17 +46,17 @@ block content
                 p.about__hihglight__label=section.primary.label
 
               //- Render the highlight title
-              h3.about__highlight__title=section.primary.title[0].text
+              h3.about__highlight__title(data-animation="title")=section.primary.title[0].text
 
               //- Loop through each media item in the highlight section
               each media in section.items
                 figure.about__hihghlight__media 
                   //- Render the image for each highlight media item
-                  img.about__hihghlight__media__image(alt=media.image.alt src=media.image.url)
+                  img.about__hihghlight__media__image(alt=media.image.alt data-src=media.image.url)
 
           if section.slice_type == 'gallery'
             section.about__images 
               .about__gallery__wrapper
                 each media in about[0].data.gallery 
                   figure.about__gallery__media 
-                    img.about__gallery__media__image(alt=media.image.alt src=media.image.url)
+                    img.about__gallery__media__image(alt=media.image.alt data-src=media.image.url)
