--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -4,15 +4,25 @@ block variables
   - var template = 'home'
 
 block content 
-  .home
+  .home(data-background="#C97164" data-color="#F9F1E7")
     .home__wrapper
       .home__titles
-        each item, index in collection 
-          .collections__titles__label=`${home.data.collection} ${Numbers(index)}`
-          .collections__titles__title=item.data.title
+        each item, index in collection
+          .home__titles__label
+            .home__titles__label__text=`${home.data.collection} ${Numbers(index)}`
 
-      each media in home.data.gallery 
-        figure.home__gallery__media 
-          img.home__gallery__image(alt=media.image.alt src=media.image.url)
+          .home__titles__title
+            .home__titles__title__text=item.data.title
 
-      a.home__link(href=Link(home.data.collections))=home.data.button  
+      .home__gallery
+        each rows in [0, 1]
+          each media, index in home.data.gallery
+            figure.home__gallery__media(class=`home__gallery__media--${index % 5 + 1}`)
+              img.home__gallery__media__image(alt=media.image.alt data-src=media.image.url)
+
+      //- a.home__link(data-animation="button" href=Link(home.data.collection))
+      a.home__link(data-animation="button" href=`/collection`)
+        span=home.data.button
+        svg.home__link__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 288 60")
+          path(stroke="#fff" opacity="0.4" fill="none" d="M144,0.5c79.25,0,143.5,13.21,143.5,29.5S223.25,59.5,144,59.5S0.5,46.29,0.5,30S64.75,0.5,144,0.5z")
+          path(stroke="#fff" fill="none" d="M144,0.5c79.25,0,143.5,13.21,143.5,29.5S223.25,59.5,144,59.5S0.5,46.29,0.5,30S64.75,0.5,144,0.5z")
