--- a/views/partials/preloader.pug
+++ b/views/partials/preloader.pug
@@ -1,7 +1,8 @@
 .preloader
-  p.preloader__text=preloader.data.title[0].text.replace(/\n/g, '<br>')
+  p.preloader__text!=preloader.data.title[0].text.replace(/\n/g, '<br>')
     //- | The surprise of what is possible
     //- | to make a simple 
     //- | and thin thread
 
-  .preloader__number 0%
+  .preloader__number
+    .preloader__number__text 0%
