--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -49,13 +49,13 @@ button {
 }
 
 img {
-  // opacity: 0;
+  opacity: 0;
   transition: opacity 0.4s ease;
   vertical-align: middle;
 
-  // &.loaded {
-  //   opacity: 1;
-  // }
+  &.loaded {
+    opacity: 1;
+  }
 }
 
 .content {
