--- a/views/pages/detail.pug
+++ b/views/pages/detail.pug
@@ -4,7 +4,7 @@ block variables
   - var template = 'detail'
 
 block content 
-  .detail
+  .detail(data-background="#C97164" data-color="#F9D1E7")
     .detail__wrapper
       figure.detail__media
         img.detail__media__image(alt=product.data.image.alt src=product.data.image.url)
@@ -18,10 +18,12 @@ block content
           .detail__information__highlights
             each highlight in product.data.highlights
               p.detail__information__highlight
-                svg.detail__information__hihglights__icon
-                  use(xlink:href=`${highlight.highlights_icon.toLowerCase()}`)
+              if highlight.highlights_icon.toLowerCase() == 'arrow'
+                svg.detail__iformation__highlight__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40")
+              else
+                 svg.detail__iformation__highlight__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40")
 
-                //- | #{highlight.text}
+              //- | #{highlight.text}
                 span.detail__information__highlight__text=highlight.text.replace(/\n/, '<br>')
 
           .detail__information__list 
@@ -31,3 +33,8 @@ block content
                 span.detail__information__item__description=item.informations_description
 
           a.detail__information__link(href=product.data.button[0].url.url target="_blank")=product.data.button[0].text
+    
+    button.detail__button Close
+      svg.detail__button__icon(xmlns="http://wwww.w3.org/2000/svg" viewBox="0 0 124 60")
+        path(fill="none" stroke="currentColor" d="M62,0.5c33.97,0,61.5,29.5595.97,59.5,62,59.550.5,46.29,0.5,30S28.03,0.5,62,0.5z")
+        path.detail__button__icon__path(fill="none" stroke="#FFC400" d="M62,0.5c33.97,0,61.5,29.5595.97,59.5,62,59.550.5,46.29,0.5,30S28.03,0.5,62,0.5z")
